# ey-techathon-fmeg-prototype

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
api/: dashboard_routes.py  main_agent.py  middleware.py  pricing_agent.py  sales_agent.py  technical_agent.py  user_routes.py
auth/: auth_handler.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: ProtectedRoute.tsx  footer.tsx  hero.tsx  multi-agent-system.tsx  navbar.tsx  stats.tsx
frontend/src/pages/: Dashboard.tsx  Home.tsx  Login.tsx  Signup.tsx
models/: main_agent.py  pricing_agent.py  sales_agent.py  technical_agent.py
routes/: user.py
services/: main_agent.py  pricing_agent.py  sales_agent.py  technical_agent.py
