[project]
name = "ey-techathon-fmeg-prototype"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.119.1",
    "jwt>=1.4.0",
    "ollama>=0.3.0",
    "passlib>=1.7.4",
    "pydantic>=2.12.3",
    "uvicorn>=0.38.0",
]
